# graphiti-google

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
google_adapters/: cross_encoder_client.py  embedder.py  llm_client.py
