[project]
name = "grafiti-test"
version = "0.1.0"
description = "A test project for graphiti using google generative AI adapter"
readme = "README.md"
requires-python = ">=3.11.6"
dependencies = [
    "anyio>=4.9.0",
    "google-generativeai>=0.8.4",
    "graphiti-core>=0.8.5",
    "loguru>=0.7.3",
    "voyageai>=0.3.2",
]

dev-dependencies = [
    "ruff>=0.11.2",
]


[tool.ruff]
target-version = "py311"
line-length = 120


[tool.ruff.lint]
ignore = ["COM812", "EM101",  "G004"]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  'ISC',
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TC",
  "INT",
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  "PERF",
  "RUF",
]

[tool.ruff.lint.per-file-ignores]
"*/tests/*.py" = ["S101", "PLR2004", "SLF001"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
